--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food Court</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- responsive css link -->
+    <link rel="stylesheet" href="responsive.css" /> 
     <!-- font awesome cdn -->
     <link
       rel="stylesheet"
@@ -14,9 +16,6 @@
     <!-- aos library -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- custom css link -->
-
-    <!-- responsive css link -->
-    <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
     <!-- header section -->
@@ -28,7 +27,7 @@
         >
 
         <nav class="nav">
-          <ul id="menu-item">
+          <ul id="menu_item">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">about</a></li>
             <li><a href="#products">products</a></li>
